# Transaction-Fraud

./: requirements.txt
.devcontainer/: devcontainer.json
Fraud Detection Project/: app.py
Fraud-Detection/Fraud Detection Project/: README.md  app.py  model_prediction.ipynb  requirements.txt
Project/: README.md  app.py  fraud_detection_model.pkl  pyproject.toml  requirements.txt  synthetic_data.xls
Project/.streamlit/: config.toml
