[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Fraud Detection App"
requires-python = ">=3.13.5"

[tool.setuptools]
packages = ["find:"]

[tool.pip]
no-binary = []
only-binary = [":all:"] 